--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,13 @@ name = "pip_conf_index_global"
 
 [packages]
 pyright = "*"
+epc = "*"
+orjson = "*"
+sexpdata = "*"
+six = "*"
+setuptools = "*"
+paramiko = "*"
+rapidfuzz = "*"
 
 [dev-packages]
 
